welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: ')' expected but ';' found.
(nbPas = nbPas + 1;)
                  ^Variables:2: error: illegal start of statement
(nbPas = nbPas + 1;)
                   ^