welcome.lessons.welcome.variables.Variables.scala.code
(nbPas = nbPas + 1;)
while (estSurBiscuit()==false ){
	avance()
}
prendBiscuit()

